Trying out importmaps instead of using module bundlers such as webpack, snowpack, ..etc
1.Exporting paper-core.js as it is not facilated with ES6 export already

2.paper-full.js has some extra features that is not required

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play Ground</title>
+    <script type="importmap">
+        {
+            "imports": {
+                "paper": "/node_modules/paper/dist/paper-core.js"
+            }
+        }
+    </script>
+    <script type="module">
+        import paper from "paper";
+        console.log('paper',paper)
+    </script>
 </head>
 <body>
     
