provided block breaker game navigation link in main page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="/Features/ImportMaps/index.html" >Import Maps</a></li>
         <li><a href="/Features/DeclarativeShadowDOM/index.html" >Declarative Shadow DOM</a></li>
+        <li><a href="/Features/BlockBreaker/index.html" >Block Breaker Game</a></li>
     </ul>
 </body>
 </html>
