--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="/Features/ImportMaps/index.html" >Import Maps</a></li>
         <li><a href="/Features/DeclarativeShadowDOM/index.html" >Declarative Shadow DOM</a></li>
         <li><a href="/Features/BlockBreaker/index.html" >Block Breaker Game</a></li>
+        <li><a href="/Features/DragAndDrop/index.html" >Drag and Drop</a></li>
     </ul>
 </body>
 </html>
