--- a/Features/GitHub/index.html
+++ b/Features/GitHub/index.html
@@ -4,44 +4,113 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>GitHub API</title>
         <script type="module">
             import { Octokit } from "https://cdn.skypack.dev/@octokit/core";
             const octokit = new Octokit({
                 auth: `personal-access-token`,
             });
-            async function* fetchCommits(branchList) {
+            let totalBranches = 0;
+            let lessThanNinentyDays = 0;
+            let moreThanOneEightyDays = 0;
+            let ninentyToOneEightyDays = 0;
+            let threeHundredDays = 0;
+            let protectedBranches = 0;
+            async function* fetchBranchDetails(branchList) {
                 for (let x = 0; x < branchList.length; x++) {
                     yield await octokit.request(
                         "GET /repos/{owner}/{repo}/branches/{branch}",
                         {
-                            owner: "dineshannadurai",
-                            repo: "play-ground",
+                            owner: "<owner>",
+                            repo: "<repo>",
                             branch: branchList[x].name,
                         }
                     );
-                    // console.log(
-                    //     "branchResponse",
-                    //     branchResponse.commit.author.date
-                    // );
-                    
+                }
+            }
+            async function fetchBranchList() {
+                let pageNumber = 1;
+                while (pageNumber !== null) {
+                    const branchListResponse = await octokit.request(
+                        "GET /repos/{owner}/{repo}/branches",
+                        {
+                            owner: "<owner>",
+                            repo: "<repo>",
+                            per_page: 100,
+                            page: pageNumber,
+                        }
+                    );
+
+                    const { data: branchList } = branchListResponse;
+
+                    if (!branchList.length) {
+                        pageNumber = null;
+                    } else pageNumber++;
+
+                    for await (const details of fetchBranchDetails(
+                        branchList
+                    )) {
+                        totalBranches++;
+                        const lastCommitdate = new Date(
+                            `${details.data.commit.commit.author.date}`
+                        );
+                        const currentDate = new Date();
+                        const diffTime = Math.abs(currentDate - lastCommitdate);
+                        const diffDays = Math.round(
+                            diffTime / (1000 * 60 * 60 * 24)
+                        );
+                        if (diffDays > 300) {
+                            threeHundredDays++;
+                        } else if (diffDays > 180) {
+                            moreThanOneEightyDays++;
+                        } else if (diffDays < 90) {
+                            lessThanNinentyDays++;
+                        } else {
+                            ninentyToOneEightyDays++;
+                        }
+
+                        if (details.data.protected) protectedBranches++;
+
+                        // Delete a branch
+                        if (details.data.name === "dinesh") {
+                            const branchDeleteResponse = await octokit.request(
+                                "DELETE /repos/{owner}/{repo}/git/refs/{ref}",
+                                {
+                                    owner: "<owner>",
+                                    repo: "<repo>",
+                                    ref: `heads/<Branch Name>`,
+                                }
+                            );
+                        }
+                    }
                 }
             }
             (async () => {
-                const branchListResponse = await octokit.request(
-                    "GET /repos/{owner}/{repo}/branches",
-                    {
-                        owner: "dineshannadurai",
-                        repo: "play-ground",
-                    }
+                await fetchBranchList();
+                console.log(
+                    `%ctotalBranches - ${totalBranches}`,
+                    "color: black; font-size: 20px"
                 );
-                console.log("Response", branchListResponse);
-
-                const { data: branchList } = branchListResponse;
-
-                for await (const details of fetchCommits(branchList)) {
-                    console.log(details.data.commit.commit.author.date);
-                }
+                console.log(
+                    `%cLast Commit - lessThanNinentyDays - ${lessThanNinentyDays}`,
+                    "color: blue; font-size: 20px"
+                );
+                console.log(
+                    `%cLast Commit - ninentyToOneEightyDays - ${ninentyToOneEightyDays}`,
+                    "color: red; font-size: 20px"
+                );
+                console.log(
+                    `%cLast Commit - moreThanOneEightyDays - ${moreThanOneEightyDays}`,
+                    "color: green; font-size: 20px"
+                );
+                console.log(
+                    `%cthreeHundredDays - ${threeHundredDays}`,
+                    "color: violet; font-size: 20px"
+                );
+                console.log(
+                    `%cprotectedBranches - ${protectedBranches}`,
+                    "color: yellow; font-size: 20px"
+                );
             })();
         </script>
     </head>
