--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <li><a href="/Features/BlockBreaker/index.html" >Block Breaker Game</a></li>
         <li><a href="/Features/DragAndDrop/index.html" >Drag and Drop</a></li>
     </ul>
+    <div></div>
 </body>
 </html>
