--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Features</h1>
     <ul>
-        <li><a href="/Features/ImportMaps/index.html" >Import Maps</a></li>
-        <li><a href="/Features/DeclarativeShadowDOM/index.html" >Declarative Shadow DOM</a></li>
-        <li><a href="/Features/BlockBreaker/index.html" >Block Breaker Game</a></li>
-        <li><a href="/Features/DragAndDrop/index.html" >Drag and Drop</a></li>
+        <li><a href="#/Features/ImportMaps/index.html" >Import Maps</a></li>
+        <li><a href="#/Features/DeclarativeShadowDOM/index.html" >Declarative Shadow DOM</a></li>
+        <li><a href="#/Features/BlockBreaker/index.html" >Block Breaker Game</a></li>
+        <li><a href="#/Features/DragAndDrop/index.html" >Drag and Drop</a></li>
     </ul>
 </body>
 </html>
