--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play Ground</title>
-</head>
-<body>
-    <h1>Features</h1>
-    <ul>
-        <li><a href="#/Features/ImportMaps/index.html" >Import Maps</a></li>
-        <li><a href="#/Features/DeclarativeShadowDOM/index.html" >Declarative Shadow DOM</a></li>
-        <li><a href="#/Features/BlockBreaker/index.html" >Block Breaker Game</a></li>
-        <li><a href="#/Features/DragAndDrop/index.html" >Drag and Drop</a></li>
-    </ul>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Play Ground</title>
+    </head>
+    <body>
+        <div data-router-elements>Loading...</div>
+        <script type="module" src="index.js"></script>
+    </body>
 </html>
