--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Play Ground</title>
-    <base href="https://dineshannadurai.github.io/play-ground/"></head>
-    <body>
-        <div data-router-elements>Loading...</div>
-        <script type="module" src="index.js"></script>
-    <script src="main.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Play Ground</title><base href="https://dineshannadurai.github.io/play-ground/"></head><body><div data-router-elements>Loading...</div><script src="index.js"></script><script src="blockbreaker.js"></script><script src="shadowdom.js"></script><script src="draganddrop.js"></script></body></html>
