--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Play Ground</title>
     </head>
+    <style>
+        html,
+        body {
+            margin: 0;
+            height: 100%;
+        }
+        .root-container {
+            height: 100%;
+        }
+    </style>
     <body>
-        <div data-router-elements>Loading...</div>
-        <script type="module" src="index.js"></script>
+        <div class="root-container" data-router-elements>Loading...</div>
     </body>
 </html>
