--- a/Features/DragAndDrop/index.html
+++ b/Features/DragAndDrop/index.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
-        <button id="dragBtn">Drag me</button>
+        <div class="drag-btn-container" >
+            <button id="dragBtn">Drag me</button>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
