--- a/Features/ImportMaps/index.html
+++ b/Features/ImportMaps/index.html
@@ -1,76 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Import Maps</title>
-    <script type="importmap">
-        {
-            "imports": {
-                "paper": "/paperjs-v0.12.15/dist/paper-core.js"
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Import Maps</title>
+        <script type="importmap">
+            {
+                "imports": {
+                    "paper": "/node_modules/paper/dist/paper-core.js"
+                }
             }
-        }
-    </script>
-    <script type="module">
-        import paper from "paper";
-        
-        // Get a reference to the canvas object
-        var canvas = document.getElementById("canvas");
-        // Create an empty project and a view for the canvas:
-        paper.setup(canvas);
-        // Create a Paper.js Path to draw a line into it:
-        // Adapted from the following Processing example:
-        // http://processing.org/learning/topics/follow3.html
+        </script>
+        <script type="module">
+            import paper from "paper";
 
-        // The amount of points in the path:
-        var points = 25;
+            // Get a reference to the canvas object
+            var canvas = document.getElementById("canvas");
+            // Create an empty project and a view for the canvas:
+            paper.setup(canvas);
+            // Create a Paper.js Path to draw a line into it:
+            // Adapted from the following Processing example:
+            // http://processing.org/learning/topics/follow3.html
 
-        // The distance between the points:
-        var length = 50;
+            // The amount of points in the path:
+            var points = 25;
 
-        var path = new paper.Path({
-            strokeColor: "#E4141B",
-            strokeWidth: 10,
-            strokeCap: "round",
-        });
+            // The distance between the points:
+            var length = 50;
 
-        var start = new paper.Point(
-            paper.view.center.x / 10,
-            paper.view.center.y
-        );
-        for (var i = 0; i < points; i++)
-            path.add(new paper.Point(start.x + i * length, start.y + 0));
+            var path = new paper.Path({
+                strokeColor: "#E4141B",
+                strokeWidth: 10,
+                strokeCap: "round",
+            });
 
-        canvas.addEventListener("mousemove", function onMouseMove(event) {
-            path.firstSegment.point = new paper.Point(event.x, event.y);
-            for (var i = 0; i < points - 1; i++) {
-                var segment = path.segments[i];
-                var nextSegment = segment.next;
-                var vector = new paper.Point(
-                    segment.point.x - nextSegment.point.x,
-                    segment.point.y - nextSegment.point.y
-                );
-                vector.length = length;
-                nextSegment.point = new paper.Point(
-                    segment.point.x - vector.x,
-                    segment.point.y - vector.y
-                );
-            }
-            path.smooth({ type: "continuous" });
-        });
+            var start = new paper.Point(
+                paper.view.center.x / 10,
+                paper.view.center.y
+            );
+            for (var i = 0; i < points; i++)
+                path.add(new paper.Point(start.x + i * length, start.y + 0));
 
-        canvas.addEventListener("mousedown", function onMouseDown(event) {
-            path.fullySelected = true;
-            path.strokeColor = "#e08285";
-        });
+            canvas.addEventListener("mousemove", function onMouseMove(event) {
+                path.firstSegment.point = new paper.Point(event.x, event.y);
+                for (var i = 0; i < points - 1; i++) {
+                    var segment = path.segments[i];
+                    var nextSegment = segment.next;
+                    var vector = new paper.Point(
+                        segment.point.x - nextSegment.point.x,
+                        segment.point.y - nextSegment.point.y
+                    );
+                    vector.length = length;
+                    nextSegment.point = new paper.Point(
+                        segment.point.x - vector.x,
+                        segment.point.y - vector.y
+                    );
+                }
+                path.smooth({ type: "continuous" });
+            });
 
-        canvas.addEventListener("mouseup", function onMouseUp(event) {
-            path.fullySelected = false;
-            path.strokeColor = "#e4141b";
-        });
-    </script>
-</head>
-<body>
-    <canvas style="width: 100%; height: 100%" id="canvas" resize></canvas>
-</body>
+            canvas.addEventListener("mousedown", function onMouseDown(event) {
+                path.fullySelected = true;
+                path.strokeColor = "#e08285";
+            });
+
+            canvas.addEventListener("mouseup", function onMouseUp(event) {
+                path.fullySelected = false;
+                path.strokeColor = "#e4141b";
+            });
+        </script>
+    </head>
+    <body>
+        <canvas style="width: 100%; height: 100%" id="canvas" resize></canvas>
+    </body>
 </html>
