--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Play Ground</title><base href="https://dineshannadurai.github.io/play-ground/"></head><body><div data-router-elements>Loading...</div><script type="module" src="index.js"></script><script src="main.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Play Ground</title>
+    </head>
+    <style>
+        html,
+        body {
+            margin: 0;
+            height: 100%;
+        }
+        .root-container {
+            height: 100%;
+        }
+    </style>
+    <body>
+        <div class="root-container" data-router-elements>Loading...</div>
+    <script src="main.js"></script></body>
+</html>
