--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Play Ground</title>
-        <link type="text/css" rel="stylesheet" href="/src/index.css" />
+        <link type="text/css" rel="stylesheet" href="./index.css" />
         <!-- Import maps when using without bundler -->
-        <!-- <script type="importmap">
+        <script type="importmap">
             {
                 "imports": {
-                    "utility": "/src/Features/ImportMaps/utility.js",
-                    "paper": "/src/paper/paper-core.min.js"
+                    "utility": "/Features/ImportMaps/utility.js",
+                    "paper": "/paper/paper-core.min.js"
                 }
             }
-        </script> -->
+        </script>
     </head>
     <body>
         <div class="root-container" data-router-elements>Loading...</div>
         <!-- Uncomment when not bundling  -->
-        <!-- <script type="module" src="/src/index.js"></script> -->
-    <script src="main.js"></script></body>
+        <script type="module" src="./index.js"></script>
+    </body>
 </html>
