--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <script type="importmap">
             {
                 "imports": {
-                    "utility": "/Features/ImportMaps/utility.js",
-                    "paper": "/paper/paper-core.min.js"
+                    "utility": "./Features/ImportMaps/utility.js",
+                    "paper": "./paper/paper-core.min.js"
                 }
             }
         </script>
