--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Play Ground</title>
-        <link type="text/css" rel="stylesheet" href="/src/index.css" />
+        <link type="text/css" rel="stylesheet" href="./src/index.css" />
         <!-- Import maps when using without bundler -->
         <!-- <script type="importmap">
             {
                 "imports": {
-                    "utility": "/src/Features/ImportMaps/utility.js",
-                    "paper": "/src/paper/paper-core.min.js"
+                    "utility": "./src/Features/ImportMaps/utility.js",
+                    "paper": "./src/paper/paper-core.min.js"
                 }
             }
         </script> -->
@@ -18,6 +18,6 @@
     <body>
         <div class="root-container" data-router-elements>Loading...</div>
         <!-- Uncomment when not bundling  -->
-        <!-- <script type="module" src="/src/index.js"></script> -->
+        <!-- <script type="module" src="./src/index.js"></script> -->
     </body>
 </html>
