--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Play Ground</title>
-        <link type="text/css" rel="stylesheet" href="../src/index.css" />
+        <link type="text/css" rel="stylesheet" href="/src/index.css" />
         <!-- Import maps when using without bundler -->
         <!-- <script type="importmap">
             {
