removed link tag and added css import in ES modules

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Play Ground</title>
-        <link type="text/css" rel="stylesheet" href="/src/index.css" />
-        <!-- Import maps when using without bundler -->
+        <!-- Uncomment when using without bundler -->
+        <!-- <link type="text/css" rel="stylesheet" href="./src/index.css" /> -->
         <!-- <script type="importmap">
             {
                 "imports": {
-                    "utility": "../src/Features/ImportMaps/utility.js",
-                    "paper": "../src/paper/paper-core.min.js"
+                    "utility": "./src/Features/ImportMaps/utility.js",
+                    "paper": "./src/paper/paper-core.min.js"
                 }
             }
         </script> -->
