Updated file paths and added breadcrumb

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         <!-- <script type="importmap">
             {
                 "imports": {
-                    "utility": "./src/Features/ImportMaps/utility.js",
+                    "utility": "./src/Features/Upcoming/ImportMaps/utility.js",
                     "paper": "./src/paper/paper-core.min.js"
                 }
             }
@@ -20,9 +20,9 @@
             <nav aria-label="Main Navigation">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#upcoming-features">Upcoming Features</a></li>
+                    <li><a href="#upcoming-features">Upcoming</a></li>
                     <li><a href="#javascript">Javascript</a></li>
-                    <li><a href="#html-css">HTML and CSS</a></li>
+                    <li><a href="#html-and-css">HTML&CSS</a></li>
                 </ul>
             </nav>
         </header>
