--- a/src/Features/Javascript/BlockBreaker/index.html
+++ b/src/Features/Javascript/BlockBreaker/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Block Breaker</title>
-</head>
-<script type="text/javascript" src="/node_modules/paper/dist/paper-full.min.js"></script>
-<link rel="stylesheet" href="index.css">
-<body>
-    <canvas id="block-breaker-canvas" resize ></canvas>
-    <script type="text/javascript" src="./index.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Block Breaker</title>
+    </head>
+    <script
+        type="text/javascript"
+        src="/node_modules/paper/dist/paper-full.min.js"
+    ></script>
+    <link rel="stylesheet" href="index.css" />
+    <body>
+        <canvas id="block-breaker-canvas" resize></canvas>
+        <script type="text/javascript" src="./index.js"></script>
+    </body>
 </html>
