--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 }
             }
         </script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.28/ua-parser.min.js" integrity="sha512-D14L3VcpQgeZZyuwbR+7rnfKzP1Aw9liJSaYGpwKYdGJB13UZY4lujfe83zgL1CyYaHtLG7VEhRDQNICsnYUtQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     </head>
     <body>
         <header>
@@ -23,6 +24,7 @@
                     <li><a href="#upcoming-features">Upcoming</a></li>
                     <li><a href="#javascript">Javascript</a></li>
                     <li><a href="#html-and-css">HTML&CSS</a></li>
+                    <li><a href="#web-components">Web Components</a></li>
                 </ul>
             </nav>
         </header>
