HTML topics added

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,13 @@
                             >MDN web docs</a
                         >
                     </li>
+                    <li>
+                        <a
+                            href="https://html.spec.whatwg.org/multipage/"
+                            target="_blank"
+                            >HTML whatwg</a
+                        >
+                    </li>
                 </ul>
             </nav>
         </footer>
