--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Play Ground - check</title>
+        <link rel="stylesheet" href="https://unpkg.com/open-props" />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/open-props/normalize.min.css"
+        />
     </head>
     <body>
-        <header>
+        <header class="surface2">
             <nav aria-label="Main Navigation">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -19,7 +24,7 @@
         <main>
             <div class="root-container" data-router-elements>Loading...</div>
         </main>
-        <footer>
+        <footer class="surface2">
             <h2 id="references">References</h2>
             <nav aria-labelledby="references">
                 <ul>
