--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Play Ground</title>
-        <!-- Uncomment when using without bundler -->
-        <!-- <link type="text/css" rel="stylesheet" href="./src/index.css" /> -->
-        <!-- <script type="importmap">
-            {
-                "imports": {
-                    "utility": "./src/Features/Upcoming/ImportMaps/utility.js",
-                    "paper": "./src/paper/paper-core.min.js"
-                }
-            }
-        </script> -->
+        <title>Play Ground - check</title>
+        <link rel="stylesheet" href="https://unpkg.com/open-props" />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/open-props/normalize.min.css"
+        />
     </head>
     <body>
-        <header>
+        <header class="surface2">
             <nav aria-label="Main Navigation">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -29,7 +24,7 @@
         <main>
             <div class="root-container" data-router-elements>Loading...</div>
         </main>
-        <footer>
+        <footer class="surface2">
             <h2 id="references">References</h2>
             <nav aria-labelledby="references">
                 <ul>
@@ -56,7 +51,5 @@
                 </ul>
             </nav>
         </footer>
-        <!-- Uncomment when not bundling  -->
-        <!-- <script type="module" src="./src/index.js"></script> -->
     <script src="main.js"></script></body>
 </html>
