feat(style): dark theme implementation by meta tag
remove the existing code for dark & light theme

--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Play Ground - check</title>
-        <link rel="stylesheet" href="https://unpkg.com/open-props" />
-        <link
-            rel="stylesheet"
-            href="https://unpkg.com/open-props/normalize.min.css"
-        />
-    </head>
-    <body>
-        <header class="surface2">
-            <nav aria-label="Main Navigation">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#upcoming-features">Upcoming</a></li>
-                    <li><a href="#javascript">Javascript</a></li>
-                    <li><a href="#html-and-css">HTML&CSS</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <div class="root-container" data-router-elements>Loading...</div>
-        </main>
-        <footer class="surface2">
-            <h2 id="references">References</h2>
-            <nav aria-labelledby="references">
-                <ul>
-                    <li>
-                        <a href="https://web.dev/" target="_blank">webdev</a>
-                    </li>
-                    <li>
-                        <a href="https://www.w3.org/" target="_blank">W3C</a>
-                    </li>
-                    <li>
-                        <a
-                            href="https://developer.mozilla.org/en-US/"
-                            target="_blank"
-                            >MDN web docs</a
-                        >
-                    </li>
-                    <li>
-                        <a
-                            href="https://html.spec.whatwg.org/multipage/"
-                            target="_blank"
-                            >HTML whatwg</a
-                        >
-                    </li>
-                </ul>
-            </nav>
-        </footer>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
+    <title>Play Ground - check</title>
+    <link rel="stylesheet" href="https://unpkg.com/open-props" />
+    <link rel="stylesheet" href="https://unpkg.com/open-props/normalize.min.css" />
+</head>
+
+<body>
+    <header class="surface2">
+        <nav aria-label="Main Navigation">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#upcoming-features">Upcoming</a></li>
+                <li><a href="#javascript">Javascript</a></li>
+                <li><a href="#html-and-css">HTML&CSS</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="root-container" data-router-elements>Loading...</div>
+    </main>
+    <footer class="surface2">
+        <h2 id="references">References</h2>
+        <nav aria-labelledby="references">
+            <ul>
+                <li>
+                    <a href="https://web.dev/" target="_blank">webdev</a>
+                </li>
+                <li>
+                    <a href="https://www.w3.org/" target="_blank">W3C</a>
+                </li>
+                <li>
+                    <a href="https://developer.mozilla.org/en-US/" target="_blank">MDN web docs</a>
+                </li>
+                <li>
+                    <a href="https://html.spec.whatwg.org/multipage/" target="_blank">HTML whatwg</a>
+                </li>
+            </ul>
+        </nav>
+    </footer>
+</body>
+
 </html>
